RESOLVED FIXED294769
Browser namespace is sometimes undefined in content scripts
https://bugs.webkit.org/show_bug.cgi?id=294769
Summary Browser namespace is sometimes undefined in content scripts
Kiara Rose
Reported 2025-06-20 14:46:19 PDT
Attachments
Kiara Rose
Comment 1 2025-06-20 15:03:48 PDT
EWS
Comment 2 2025-06-23 13:32:36 PDT
Committed 296529@main (5e7069877320): <https://commits.webkit.org/296529@main> Reviewed commits have been landed. Closing PR #47003 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.